--- a/Makefile.tmpl
+++ b/Makefile.tmpl
@@ -11,3 +11,15 @@ setup :
 	cd [% conf.GB_TAXONOMY_DIR %] && tar -zxvf [% conf.GB_TAXONOMY_ARC %] $(@F) && cd -
 	
 taxonomy : [% conf.GB_TAXONOMY_DIR %]/names.dmp [% conf.GB_TAXONOMY_DIR %]/nodes.dmp
+
+schema : [% conf.SCHEMA_FILE %]
+	mysql -u [% conf.USER %] -p[% conf.PASS %] [% conf.DATABASE %] < $<
+
+dao : schema
+	perl -MDBIx::Class::Schema::Loader=make_schema_at,dump_to_dir:./lib \
+		-e 'make_schema_at("Bio::Phylo::PhyLoTA::DAO", \
+		{ db_schema => "phylota" }, \
+		[ "dbi:[% conf.RDBMS %]:dbname=[% conf.DATABASE %]", "[% conf.USER %]", "[% conf.PASS %]" ])'
+
+load_dump : [% conf.DUMP_FILE %]
+	mysql -u [% conf.USER %] -p[% conf.PASS %] [% conf.DATABASE %] < $<
